--- a/style.css
+++ b/style.css
@@ -4,3 +4,102 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* KEYFRAMES - Animation */
+@keyframes fade-in {
+    0%{
+        opacity: 0;
+        transform: translateY(15px);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(0px);
+    }
+}
+/* BASE STYLES */
+html {
+    overflow-x: hidden;
+}
+
+body{
+    font-family: sans-serif;
+    color: #292C33;
+    background-color: #EEEFF3;
+    
+}
+.bg {
+    position: absolute;
+    z-index: -1;
+}
+/* HEADER */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0px auto;
+    padding: 25px;
+    animation: fade-in 0.4s;
+}
+.logo {
+    color: rgba(255, 255, 255, 0.7);
+}
+/* .nav{
+
+} */
+
+.links{
+    display: flex;
+    column-gap: 45px;
+}
+
+/* .link-item{
+
+} */
+
+.link{
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.7);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: all 0.5s;
+}
+
+.link:hover {
+    color: rgba(255, 255, 255, 1);
+}
+
+.link--btn{
+    color: white;
+    background-color: #11A2F3;
+    padding: 10px;
+    transition: all 0.4s;
+    border-radius: 4px;
+}
+
+.link--btn:hover {
+    background-color: #0d8fda;
+}
+
+/* MAIN */
+
+main {
+    max-width: 1150px;
+    background-color: white;
+    height: 1000px;
+    margin: 0 auto;
+    border-radius: 10px;
+    margin-bottom: 35px;
+    box-shadow: 0 4px 44px rgba(0, 0, 0, 0.7);
+    animation: fade-in 0.4s 0.1s backwards;
+}
