--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ a {
     color: inherit;
 }
 
+input, button {
+    border: none;
+    font: inherit;
+}
 /* KEYFRAMES - Animation */
 @keyframes fade-in {
     0%{
@@ -28,6 +32,8 @@ a {
 }
 /* BASE STYLES */
 html {
+    --accent-color: #11A2F3;
+    --accent-color-dark: #0d8fda;
     overflow-x: hidden;
 }
 
@@ -35,6 +41,7 @@ body{
     font-family: sans-serif;
     color: #292C33;
     background-color: #EEEFF3;
+    position: relative;
     
 }
 .bg {
@@ -81,14 +88,14 @@ header {
 
 .link--btn{
     color: white;
-    background-color: #11A2F3;
+    background-color: var(--accent-color);
     padding: 10px;
     transition: all 0.4s;
     border-radius: 4px;
 }
 
 .link--btn:hover {
-    background-color: #0d8fda;
+    background-color: var(--accent-color-dark);
 }
 
 /* MAIN */
@@ -96,10 +103,326 @@ header {
 main {
     max-width: 1150px;
     background-color: white;
-    height: 1000px;
     margin: 0 auto;
     border-radius: 10px;
     margin-bottom: 35px;
     box-shadow: 0 4px 44px rgba(0, 0, 0, 0.7);
     animation: fade-in 0.4s 0.1s backwards;
+    overflow: hidden;
+}
+
+/*MAIN - INTRO SECTION */
+.intro{
+    display: flex;
+}
+
+.search{
+    background-color: #f3f3f5;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 15px;
+}
+
+h1{
+    font-size: 38px;
+    font-weight: 500;
+    margin-bottom: 30px;
+    line-height: 1.1;
+    max-width: 383px;
+}
+
+.emphasis{
+    font-style: italic;
+    font-weight: 700;
+    text-decoration: underline;
+}
+.form{
+    max-width: 383px;
+    position: relative;
+}
+
+.input{
+    height: 61px;
+    width: 100%;
+    padding-left: 53px;
+    border-radius: 4px;
+    margin-bottom: 12px;
+}
+
+.input-icon{
+    position: absolute;
+    font-size: 17px;
+    color: #adb4c2;
+}
+
+.input-icon:nth-of-type(1) {
+    top: 22px;
+    left: 22px;
+}
+
+.input-icon:nth-of-type(2) {
+    top: 95px;
+    left: 22px;
+}
+.btn{
+    width: 100%;
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: white;
+    border-radius: 4px;
+    background-color: var(--accent-color);
+    transition: all 0.4s;
+    cursor: pointer;
+    height: 61px;
+}
+
+.btn:hover{
+    /* transform: scale(1.2); */
+    background-color: var(--accent-color-dark);
+}
+.photos{
+    display: flex;
+}
+
+.photo-1{
+    display: block;
+    height: 350px;
+    width: 300px;
+}
+
+.photo-2{
+    display: block;
+    height: 350px;
+    width: 300px;
+}
+
+
+/* CREDENTIALS */
+.credentials{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 13px 0;
+    border-bottom: 1px solid rgb(199, 198, 198);
+}
+
+.seen-text{
+    font-size: 20px;
+    font-weight: 500;
+    color: #ccd0d9;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+/* HOW SECTION */
+.how{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 65px 0 85px;
+}
+
+h2{
+    font-size: 32px;
+    color: #292c33;
+    text-transform: capitalize;
+    font-weight: 500;
+    position: relative;
+}
+
+.second-heading::after{
+    content: '';
+    height: 3px;
+    width: 54px;
+    color: var(--accent-color);
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    margin-top: 10px;
+}
+
+.steps{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 80px 0;
+}
+
+.step{
+    max-width: 215px;
+    text-align: center;
+}
+
+.step-icon{
+    height: 65px;
+    width: 65px;
+    background-color: black;
+    border-radius: 5000px ;
+    color: white;
+    line-height: 65px !important;
+    margin-top: 21px;
+    /* text-align: center; */
+    /* display: flex; */
+    /* margin: auto 0; */
+}
+
+.step:nth-child(1) .step-icon{
+    background-color: #fdf6de;
+    color: #f5ca36;
+}
+
+.step:nth-child(2) .step-icon{
+    background-color: #ffdeec;
+    color: #da196a;
+}
+
+.step:nth-child(3) .step-icon{
+    background-color: #e9e5ff;
+    color: #4d31e4;
+    
+}
+
+.h3{
+    font-size: 23px;
+    color: #3d4048;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.text{
+    color: #74777d;
+    font-size: 18px;
+}
+
+.more{
+    color: var(--accent-color);
+    font-size: 18px;
+    border-bottom: 1px solid var(--accent-color);
+    padding-bottom: 5px;
+    transition: all 0.4s;
+}
+
+.more:hover{
+    color: var(--accent-color-dark);
+}
+.more-icon{
+    font-size: 14px;
+    transition: all 0.4s;
+}
+
+.more:hover .more-icon {
+    transform: translateX(3px);
+}
+
+/* FOOTER */
+footer{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    color: #a1a4b0;
+    padding: 0 25px;
+    padding-bottom: 50px;
+}
+
+.copyright{
+
+}
+
+.legal-list{
+    display: flex;
+    column-gap: 35px;
+}
+
+.legal-item{
+
+}
+
+.legal-link{
+    text-transform: capitalize;
+    font-size: 14px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1200px) {
+    main {
+        margin-left: 35px;
+        margin-right: 35px;
+    }
+
+    .photo-2{
+        display: none;
+    }
+}
+
+@media (max-width:960px) {
+    .search{
+        padding: 40px 0 50px;
+    }
+
+    .photo-1 {
+        display: none;
+    }
+
+    .credentials {
+        justify-content: space-evenly;
+    }
+    .credential:nth-last-of-type(1){
+        display: none;
+    } 
+
+    .how{
+        padding: 50px 0 65px;
+    }
+
+    .steps {
+        padding: 60px 0;
+        max-width: 500px;
+        flex-wrap: wrap;
+        row-gap: 30px;
+    }
+}
+
+@media (max-width:600px){
+    main{
+        margin-left: 0;
+        margin-right: 0;
+        border-radius: 0;
+    }
+
+    .credential:nth-last-of-type(2){
+        display: none;
+    }
+
+    .steps{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer{
+        flex-direction: column;
+        align-items: center;
+        row-gap: 35px;
+    }
+}
+
+@media (max-width: 470px){
+    header{
+        flex-direction: column;
+        row-gap: 30px;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    h1{
+        max-width: initial;
+        padding: 0 20px;
+        font-size: 30px;
+    }
 }
